# learnc

./: .gitignore  CMakeLists.txt
dm/: Combinatories-Solve-06.tex
extra/: 4-1-2.c
src/: 2-10.c  2-10.h  2-6.c  2-6.h  2-7.c  2-7.h  2-8.c  2-8.h  3-1.c  3-1.h  3-2.c  3-2.h  3-5.c  3-5.h  4-1.c  4-1.h  4-12.c  4-12.h  4-13.c  4-13.h  4-2.c  4-2.h  5-3.c  5-3.h  5-4.c  5-4.h
src/4-3/: calc.h  getch.c  getop.c  main.c  stack.c
test/: 2-10.cpp  2-6.cpp  2-7.cpp  2-8.cpp  3-1.cpp  3-2.cpp  3-5.cpp  4-1.cpp  4-12.cpp  4-13.cpp  4-2.cpp  5-3.cpp  5-4.cpp  test.cpp
